[package]
name = "rsm"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = { version = "1.6.1", features = ["derive"] }
chrono = "0.4.44"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
getrandom = "0.4.2"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.150"
sha2 = "0.11.0"
